# crewai_agent_for_appointments

.devcontainer/: devcontainer.json
agent/: README.md  crewai_flow.html  pyproject.toml
agent/src/agent/: agent.py  app.py  appointment.py  credentials.json  main.py  papa.py
