[project]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = [{ name = "Muhammad Hamza", email = "muhammadhamzaali077@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "litellm>=1.59.8",
    "google-generativeai>=0.6.0",
    "google-auth-oauthlib>=1.2.1",
    "python-dateutil>=2.9.0.post0",
    "tzlocal>=5.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]

[project.scripts]
app = "agent.appointment:main"
app_plot = "agent.appointment:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
